--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,10 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-use-before-define": "error",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-unused-vars": ["error", { "ignoreRestSiblings": true }],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "ignoreRestSiblings": true }
+    ],
     "comma-dangle": ["error", "always-multiline"]
   },
   "settings": {
